Update branding and content for KiwiCamping app; replaced all instances of 'txtpod' with 'KiwiCamping' across HTML, CSS, and metadata files. Updated sitemap and robots.txt for new domain. Removed outdated feature images related to txtpod.

--- a/download.html
+++ b/download.html
@@ -3,16 +3,16 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1, viewport-fit=cover" />
-    <title>txtpod for iOS</title>
-    <meta name="description" content="Download txtpod for iOS, convert articles to audios to listen as podcast. Text to speech podcast." />
-    <meta name="theme-color" content="#FF6B24" />
+    <title>KiwiCamping for iOS</title>
+    <meta name="description" content="Download KiwiCamping for iOS to access offline NZ camping maps, DOC huts, freedom camping rules, dump stations, and road trip planning tools." />
+    <meta name="theme-color" content="#0f3d32" />
     <meta name="color-scheme" content="light dark" />
     <link rel="stylesheet" href="style.css" />
 
     <!-- Open Graph -->
-    <meta property="og:title" content="txtpod for iOS" />
-    <meta property="og:description" content="Download txtpod for iOS, convert articles to audios to listen as podcast. Text to speech podcast." />
-    <meta property="og:image" content="images/txtpod-hero.webp" />
+    <meta property="og:title" content="KiwiCamping for iOS" />
+    <meta property="og:description" content="Offline NZ camping map with DOC huts, freedom camping bylaws, dump stations, and trip planner." />
+    <meta property="og:image" content="images/kiwicamping-hero.webp" />
     <meta property="og:type" content="website" />
 
     <!-- Redirect immediately -->
@@ -22,6 +22,6 @@
     </script>
   </head>
   <body>
-    <p>If you are not redirected, <a href="https://apps.apple.com/us/app/txtpod-text-to-speech-podcast/id6748379680">click here to download txtpod</a>.</p>
+    <p>If you are not redirected, <a href="https://apps.apple.com/us/app/txtpod-text-to-speech-podcast/id6748379680">tap here to download KiwiCamping</a>.</p>
   </body>
 </html>
