--- a/download.html
+++ b/download.html
@@ -4,24 +4,24 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1, viewport-fit=cover" />
     <title>KiwiCamping for iOS</title>
-    <meta name="description" content="Download KiwiCamping for iOS to access offline NZ camping maps, DOC huts, freedom camping rules, dump stations, and road trip planning tools." />
-    <meta name="theme-color" content="#0f3d32" />
+    <meta name="description" content="Download KiwiCamping for iOS to access offline NZ campsite, hut, holiday park info, freedom camping rules, dump stations, and road trip planning tools." />
+    <meta name="theme-color" content="#0E713C" />
     <meta name="color-scheme" content="light dark" />
     <link rel="stylesheet" href="style.css" />
 
     <!-- Open Graph -->
     <meta property="og:title" content="KiwiCamping for iOS" />
-    <meta property="og:description" content="Offline NZ camping map with DOC huts, freedom camping bylaws, dump stations, and trip planner." />
+    <meta property="og:description" content="Offline NZ campsite and hut info with freedom camping bylaws, dump stations, and trip planner." />
     <meta property="og:image" content="images/kiwicamping-hero.webp" />
     <meta property="og:type" content="website" />
 
     <!-- Redirect immediately -->
-    <meta http-equiv="refresh" content="0;url=https://apps.apple.com/us/app/txtpod-text-to-speech-podcast/id6748379680">
+    <meta http-equiv="refresh" content="0;url=https://apps.apple.com/us/app/nz-camping-map-kiwicamping/id6746952595">
     <script>
-      window.location.href = "https://apps.apple.com/us/app/txtpod-text-to-speech-podcast/id6748379680";
+      window.location.href = "https://apps.apple.com/us/app/nz-camping-map-kiwicamping/id6746952595";
     </script>
   </head>
   <body>
-    <p>If you are not redirected, <a href="https://apps.apple.com/us/app/txtpod-text-to-speech-podcast/id6748379680">tap here to download KiwiCamping</a>.</p>
+    <p>If you are not redirected, <a href="https://apps.apple.com/us/app/nz-camping-map-kiwicamping/id6746952595">tap here to download KiwiCamping</a>.</p>
   </body>
 </html>
