--- a/download.html
+++ b/download.html
@@ -12,7 +12,7 @@
     <!-- Open Graph -->
     <meta property="og:title" content="KiwiCamping for iOS" />
     <meta property="og:description" content="Offline NZ campsite and hut info with freedom camping bylaws, dump stations, and trip planner." />
-    <meta property="og:image" content="images/kiwicamping-hero.webp" />
+    <meta property="og:image" content="https://campingapp.nz/images/kiwicamping-hero.webp" />
     <meta property="og:type" content="website" />
 
     <!-- Redirect immediately -->
