Add new camping-related articles and update index links for KiwiCamping

--- a/nl/index.html
+++ b/nl/index.html
@@ -458,6 +458,111 @@
         </div>
       </section>
 
+      <section id="camping-guides" class="guides container" aria-label="KiwiCamping-gidsen">
+        <header class="guides-header">
+          <p class="eyebrow">Guides · English</p>
+          <h2>Plan beter met KiwiCamping</h2>
+          <p>Deze uitgebreide gidsen zijn voorlopig alleen in het Engels beschikbaar en behandelen regels, routes en planningstips voor reizen door Aotearoa. Open een kaart om het volledige artikel in KiwiCamping te lezen en gebruik het smart banner om de app te downloaden.</p>
+        </header>
+
+        <div class="map-note">
+          <h3>KiwiCamping legal sites map</h3>
+          <p>Open KiwiCamping, enable the freedom camping layer, and download the latest bylaws so you can cross-check rules even when offline. Every guide below links straight into KiwiCamping’s feature set so you can keep planning inside the app.</p>
+        </div>
+
+        <div class="guide-previews">
+          <article class="guide-preview">
+            <h3><a href="best-nz-camping-apps.html">Best Camping Apps for New Zealand in 2025</a></h3>
+            <p>See how KiwiCamping stacks up against Rankers, CamperMate, WikiCamps, and AllTrails after real-world testing from Cape Reinga to Bluff. We spell out which app suits each traveller, how offline data holds up, and where pricing or privacy can trip you up.</p>
+            <p class="guide-links"><a href="best-nz-camping-apps.html">Read the full guide</a> · <a href="holiday-parks-nz-booking-guide.html">Booking tactics</a></p>
+          </article>
+
+          <article class="guide-preview">
+            <h3><a href="freedom-camping-rules-nz.html">Freedom Camping in New Zealand, Rules by Region</a></h3>
+            <p>Get a plain-language breakdown of national freedom camping legislation plus every council bylaw before you park. Quick-reference tables, signage tips, and downloadable cheat sheets keep you legal from Northland to Southland.</p>
+            <p class="guide-links"><a href="freedom-camping-rules-nz.html">Region-by-region rules</a> · <a href="self-contained-vehicles-nz.html">Self-contained requirements</a></p>
+          </article>
+
+          <article class="guide-preview">
+            <h3><a href="free-camping-nz-legal.html">Can You Camp for Free in NZ, Where It Is Legal and Safe</a></h3>
+            <p>Learn exactly where camping is truly free, from council reserves to DOC basics, without risking infringement notices. Our checklist covers etiquette, safety, and verification steps so you arrive confident and welcomed.</p>
+            <p class="guide-links"><a href="free-camping-nz-legal.html">Legal free camping workflow</a> · <a href="dump-stations-nz.html">Dump station map</a></p>
+          </article>
+
+          <article class="guide-preview">
+            <h3><a href="where-to-camp-in-new-zealand.html">Where You Can Camp in New Zealand, A Complete Location Guide</a></h3>
+            <p>Map DOC land, council reserves, private holiday parks, and iwi-managed stays with regional highlights for both islands. Seasonal advice and access notes help you match each destination to your crew’s style.</p>
+            <p class="guide-links"><a href="where-to-camp-in-new-zealand.html">Browse the full location guide</a> · <a href="top-scenic-campsites-nz.html">See the scenic list</a></p>
+          </article>
+
+          <article class="guide-preview">
+            <h3><a href="holiday-parks-nz-booking-guide.html">Holiday Parks in New Zealand, How to Choose and Book</a></h3>
+            <p>Compare amenities, pricing bands, and partner booking flows so you can secure powered or unpowered sites in minutes. We also unpack cancellation rules, loyalty perks, and after-hours arrival tricks.</p>
+            <p class="guide-links"><a href="holiday-parks-nz-booking-guide.html">Holiday park HowTo</a> · <a href="camping-costs-nz.html">Budget calculator</a></p>
+          </article>
+
+          <article class="guide-preview">
+            <h3><a href="doc-campsites-huts-guide.html">DOC Campsites and Huts, Reservations, Fees, and Etiquette</a></h3>
+            <p>Understand how DOC categorises campsites and huts, what each fee tier includes, and when bookings open. Etiquette reminders, alert links, and comparisons prepare you for both serviced campgrounds and backcountry bivvies.</p>
+            <p class="guide-links"><a href="doc-campsites-huts-guide.html">Read the DOC playbook</a> · <a href="two-week-camper-itinerary-nz.html">Plan a DOC-heavy itinerary</a></p>
+          </article>
+
+          <article class="guide-preview">
+            <h3><a href="self-contained-vehicles-nz.html">Self-Contained Vehicles in NZ, What It Really Requires</a></h3>
+            <p>Decode the updated NZS 5465 requirements for fixed toilets, plumbing, vents, and tank capacity before you book an inspection. Enforcement insights and printable checklists make it easy to stay compliant wherever you roam.</p>
+            <p class="guide-links"><a href="self-contained-vehicles-nz.html">Certification checklist</a> · <a href="freedom-camping-rules-nz.html">Freedom camping rules</a></p>
+          </article>
+
+          <article class="guide-preview">
+            <h3><a href="dump-stations-nz.html">Dump Stations and Waste Etiquette for Campers</a></h3>
+            <p>Plot every dump station nationwide and follow a simple glove-on to rinse-off routine that keeps pads spotless. We cover equipment, detergents, and fine avoidance so councils keep those facilities open.</p>
+            <p class="guide-links"><a href="dump-stations-nz.html">Waste etiquette guide</a> · <a href="self-contained-vehicles-nz.html">Self-contained tips</a></p>
+          </article>
+
+          <article class="guide-preview">
+            <h3><a href="campfire-rules-nz.html">Fire Rules, Bans, and Safe Cooking Outdoors</a></h3>
+            <p>Stay ahead of restricted and prohibited fire seasons with region-by-region notes and permit guidance. Decision charts and alternative cooking ideas mean dinner still happens when open flames are banned.</p>
+            <p class="guide-links"><a href="campfire-rules-nz.html">Check current fire rules</a> · <a href="camping-packing-list-nz.html#stoves">Packing list add-ons</a></p>
+          </article>
+
+          <article class="guide-preview">
+            <h3><a href="nz-camping-seasons-weather-sandflies.html">Sandflies, Weather, and Seasons, How to Plan a Comfortable Trip</a></h3>
+            <p>Plan around New Zealand’s shifting weather bands, winds, and sandfly zones with month-by-month comfort intel. Gear suggestions and coping tactics keep the crew cosy without overpacking.</p>
+            <p class="guide-links"><a href="nz-camping-seasons-weather-sandflies.html">Seasonal planning guide</a> · <a href="camping-packing-list-nz.html">Packing checklist</a></p>
+          </article>
+
+          <article class="guide-preview">
+            <h3><a href="camping-packing-list-nz.html">Essential NZ Camping Packing List with Regional Variants</a></h3>
+            <p>Run through a practical checklist of core camping essentials plus alpine, coastal, and wet-weather extras tailored to NZ conditions. Printable PDFs and comms advice make group prep fast and fuss-free.</p>
+            <p class="guide-links"><a href="camping-packing-list-nz.html">Download the checklist</a> · <a href="nz-camping-seasons-weather-sandflies.html">Match to seasons</a></p>
+          </article>
+
+          <article class="guide-preview">
+            <h3><a href="responsible-camping-nz.html">Responsible Camping in NZ, Leave No Trace Applied Locally</a></h3>
+            <p>See how Leave No Trace principles translate to Aotearoa’s landscapes, wildlife, and communities in plain language. Share the code-of-conduct graphic and biosecurity tips so everyone in your convoy protects the whenua.</p>
+            <p class="guide-links"><a href="responsible-camping-nz.html">Read the code of conduct</a> · <a href="dump-stations-nz.html">Waste etiquette</a></p>
+          </article>
+
+          <article class="guide-preview">
+            <h3><a href="top-scenic-campsites-nz.html">Top 25 Scenic Campsites in New Zealand by Region</a></h3>
+            <p>Scout 25 postcard-ready campsites complete with KiwiCamping deep links for instant saving and navigation. Access notes, booking cues, and photo ideas help you line up unforgettable sunrise spots.</p>
+            <p class="guide-links"><a href="top-scenic-campsites-nz.html">See the top 25</a> · <a href="where-to-camp-in-new-zealand.html">Regional overview</a></p>
+          </article>
+
+          <article class="guide-preview">
+            <h3><a href="two-week-camper-itinerary-nz.html">Two-Week New Zealand Camper Itinerary, North and South Islands</a></h3>
+            <p>Follow a 14-day itinerary that balances DOC gems, freedom sites, and holiday parks while weaving in ferry crossings, fuel, and grocery stops. Downloadable GPX files and printable day plans make customising the route effortless.</p>
+            <p class="guide-links"><a href="two-week-camper-itinerary-nz.html">Load the 14-day plan</a> · <a href="camping-costs-nz.html">Budget the trip</a></p>
+          </article>
+
+          <article class="guide-preview">
+            <h3><a href="camping-costs-nz.html">Costs of Camping in NZ, Budget Breakdown with Real Examples</a></h3>
+            <p>Stack real-world budgets for solo travellers, couples, and families by mixing free nights, DOC stays, and holiday parks. We add fuel, ferry fares, food, and gear amortisation so you can tweak the spreadsheet to your style.</p>
+            <p class="guide-links"><a href="camping-costs-nz.html">Plan your budget</a> · <a href="holiday-parks-nz-booking-guide.html">Save on bookings</a></p>
+          </article>
+        </div>
+      </section>
+
       <section id="reviews" class="reviews container" aria-label="Reviews and testimonials">
         <h2>Wat Kiwi-kampeerders zeggen</h2>
         <div class="reviews-grid">
