--- a/it/index.html
+++ b/it/index.html
@@ -458,11 +458,11 @@
         </div>
       </section>
 
-      <section id="camping-guides" class="guides container" aria-label="Guide KiwiCamping">
+      <section id="camping-guides" class="guides container" aria-label="Guías de KiwiCamping">
         <header class="guides-header">
           <p class="eyebrow">Guides · English</p>
-          <h2>Pianifica meglio con KiwiCamping</h2>
-          <p>Queste guide approfondite sono disponibili in inglese e coprono norme, itinerari e consigli di pianificazione per esplorare Aotearoa. Apri qualsiasi card per leggere l’articolo completo in KiwiCamping mentre usi lo smart banner per scaricare l’app.</p>
+          <h2>Plan better with KiwiCamping</h2>
+          <p>Estas guías extensas están disponibles en inglés y profundizan en normativas, itinerarios y planificación para recorrer Aotearoa. Abre cualquier tarjeta para seguir leyendo dentro de KiwiCamping mientras aprovechas el banner inteligente para descargar la app.</p>
         </header>
 
         <div class="map-note">
@@ -470,95 +470,95 @@
           <p>Open KiwiCamping, enable the freedom camping layer, and download the latest bylaws so you can cross-check rules even when offline. Every guide below links straight into KiwiCamping’s feature set so you can keep planning inside the app.</p>
         </div>
 
-        <div class="guide-previews">
+        <div class="guide-previews guide-grid">
           <article class="guide-preview">
             <h3><a href="best-nz-camping-apps.html">Best Camping Apps for New Zealand in 2025</a></h3>
-            <p>See how KiwiCamping stacks up against Rankers, CamperMate, WikiCamps, and AllTrails after real-world testing from Cape Reinga to Bluff. We spell out which app suits each traveller, how offline data holds up, and where pricing or privacy can trip you up.</p>
-            <p class="guide-links"><a href="best-nz-camping-apps.html">Read the full guide</a> · <a href="holiday-parks-nz-booking-guide.html">Booking tactics</a></p>
+            <ul class="guide-bullets"><li>Lab-tested KiwiCamping vs Rankers, CamperMate, WikiCamps, and AllTrails across NZ.</li><li>Shows who each app suits, how offline data behaves, and where pricing/privacy differ.</li></ul>
+            <p class="guide-links"><span class="guide-arrow">→</span> <a href="best-nz-camping-apps.html">Read the full guide</a> · <a href="holiday-parks-nz-booking-guide.html">Booking tactics</a></p>
           </article>
 
           <article class="guide-preview">
             <h3><a href="freedom-camping-rules-nz.html">Freedom Camping in New Zealand, Rules by Region</a></h3>
-            <p>Get a plain-language breakdown of national freedom camping legislation plus every council bylaw before you park. Quick-reference tables, signage tips, and downloadable cheat sheets keep you legal from Northland to Southland.</p>
-            <p class="guide-links"><a href="freedom-camping-rules-nz.html">Region-by-region rules</a> · <a href="self-contained-vehicles-nz.html">Self-contained requirements</a></p>
+            <ul class="guide-bullets"><li>Explains national law plus every council bylaw in plain language.</li><li>Includes signage tips and downloadable cheat sheets for North and South Island.</li></ul>
+            <p class="guide-links"><span class="guide-arrow">→</span> <a href="freedom-camping-rules-nz.html">Region-by-region rules</a> · <a href="self-contained-vehicles-nz.html">Self-contained requirements</a></p>
           </article>
 
           <article class="guide-preview">
             <h3><a href="free-camping-nz-legal.html">Can You Camp for Free in NZ, Where It Is Legal and Safe</a></h3>
-            <p>Learn exactly where camping is truly free, from council reserves to DOC basics, without risking infringement notices. Our checklist covers etiquette, safety, and verification steps so you arrive confident and welcomed.</p>
-            <p class="guide-links"><a href="free-camping-nz-legal.html">Legal free camping workflow</a> · <a href="dump-stations-nz.html">Dump station map</a></p>
+            <ul class="guide-bullets"><li>Identifies genuinely free camping options and typical enforcement patterns.</li><li>Offers etiquette, safety, and legality checks before you settle in for the night.</li></ul>
+            <p class="guide-links"><span class="guide-arrow">→</span> <a href="free-camping-nz-legal.html">Legal free camping workflow</a> · <a href="dump-stations-nz.html">Dump station map</a></p>
           </article>
 
           <article class="guide-preview">
             <h3><a href="where-to-camp-in-new-zealand.html">Where You Can Camp in New Zealand, A Complete Location Guide</a></h3>
-            <p>Map DOC land, council reserves, private holiday parks, and iwi-managed stays with regional highlights for both islands. Seasonal advice and access notes help you match each destination to your crew’s style.</p>
-            <p class="guide-links"><a href="where-to-camp-in-new-zealand.html">Browse the full location guide</a> · <a href="top-scenic-campsites-nz.html">See the scenic list</a></p>
+            <ul class="guide-bullets"><li>Highlights DOC, council, private, and iwi-managed stays for both islands.</li><li>Seasonal notes and access guidance help match locations to your trip style.</li></ul>
+            <p class="guide-links"><span class="guide-arrow">→</span> <a href="where-to-camp-in-new-zealand.html">Browse the full location guide</a> · <a href="top-scenic-campsites-nz.html">See the scenic list</a></p>
           </article>
 
           <article class="guide-preview">
             <h3><a href="holiday-parks-nz-booking-guide.html">Holiday Parks in New Zealand, How to Choose and Book</a></h3>
-            <p>Compare amenities, pricing bands, and partner booking flows so you can secure powered or unpowered sites in minutes. We also unpack cancellation rules, loyalty perks, and after-hours arrival tricks.</p>
-            <p class="guide-links"><a href="holiday-parks-nz-booking-guide.html">Holiday park HowTo</a> · <a href="camping-costs-nz.html">Budget calculator</a></p>
+            <ul class="guide-bullets"><li>Compares amenities, pricing bands, partners, and loyalty perks for NZ holiday parks.</li><li>Step-by-step booking, cancellation, and after-hours arrival workflow with checklists.</li></ul>
+            <p class="guide-links"><span class="guide-arrow">→</span> <a href="holiday-parks-nz-booking-guide.html">Holiday park HowTo</a> · <a href="camping-costs-nz.html">Budget calculator</a></p>
           </article>
 
           <article class="guide-preview">
             <h3><a href="doc-campsites-huts-guide.html">DOC Campsites and Huts, Reservations, Fees, and Etiquette</a></h3>
-            <p>Understand how DOC categorises campsites and huts, what each fee tier includes, and when bookings open. Etiquette reminders, alert links, and comparisons prepare you for both serviced campgrounds and backcountry bivvies.</p>
-            <p class="guide-links"><a href="doc-campsites-huts-guide.html">Read the DOC playbook</a> · <a href="two-week-camper-itinerary-nz.html">Plan a DOC-heavy itinerary</a></p>
+            <ul class="guide-bullets"><li>Breaks down DOC campsite and hut categories, fees, and booking windows.</li><li>Etiquette tips, alert links, and comparisons prepare you for serviced or backcountry stays.</li></ul>
+            <p class="guide-links"><span class="guide-arrow">→</span> <a href="doc-campsites-huts-guide.html">Read the DOC playbook</a> · <a href="two-week-camper-itinerary-nz.html">Plan a DOC-heavy itinerary</a></p>
           </article>
 
           <article class="guide-preview">
             <h3><a href="self-contained-vehicles-nz.html">Self-Contained Vehicles in NZ, What It Really Requires</a></h3>
-            <p>Decode the updated NZS 5465 requirements for fixed toilets, plumbing, vents, and tank capacity before you book an inspection. Enforcement insights and printable checklists make it easy to stay compliant wherever you roam.</p>
-            <p class="guide-links"><a href="self-contained-vehicles-nz.html">Certification checklist</a> · <a href="freedom-camping-rules-nz.html">Freedom camping rules</a></p>
+            <ul class="guide-bullets"><li>Translates NZS 5465 requirements for fixed toilets, tanks, vents, and inspection prep.</li><li>Covers enforcement realities and includes printable compliance checklists.</li></ul>
+            <p class="guide-links"><span class="guide-arrow">→</span> <a href="self-contained-vehicles-nz.html">Certification checklist</a> · <a href="freedom-camping-rules-nz.html">Freedom camping rules</a></p>
           </article>
 
           <article class="guide-preview">
             <h3><a href="dump-stations-nz.html">Dump Stations and Waste Etiquette for Campers</a></h3>
-            <p>Plot every dump station nationwide and follow a simple glove-on to rinse-off routine that keeps pads spotless. We cover equipment, detergents, and fine avoidance so councils keep those facilities open.</p>
-            <p class="guide-links"><a href="dump-stations-nz.html">Waste etiquette guide</a> · <a href="self-contained-vehicles-nz.html">Self-contained tips</a></p>
+            <ul class="guide-bullets"><li>Maps every dump station nationwide with gear suggestions and rinse routines.</li><li>Shows how to avoid fines, manage detergents, and keep facilities open.</li></ul>
+            <p class="guide-links"><span class="guide-arrow">→</span> <a href="dump-stations-nz.html">Waste etiquette guide</a> · <a href="self-contained-vehicles-nz.html">Self-contained tips</a></p>
           </article>
 
           <article class="guide-preview">
             <h3><a href="campfire-rules-nz.html">Fire Rules, Bans, and Safe Cooking Outdoors</a></h3>
-            <p>Stay ahead of restricted and prohibited fire seasons with region-by-region notes and permit guidance. Decision charts and alternative cooking ideas mean dinner still happens when open flames are banned.</p>
-            <p class="guide-links"><a href="campfire-rules-nz.html">Check current fire rules</a> · <a href="camping-packing-list-nz.html#stoves">Packing list add-ons</a></p>
+            <ul class="guide-bullets"><li>Outlines fire seasons, permits, and regional restrictions at a glance.</li><li>Decision charts plus cooking alternatives keep meals on track during burn bans.</li></ul>
+            <p class="guide-links"><span class="guide-arrow">→</span> <a href="campfire-rules-nz.html">Check current fire rules</a> · <a href="camping-packing-list-nz.html#stoves">Packing list add-ons</a></p>
           </article>
 
           <article class="guide-preview">
             <h3><a href="nz-camping-seasons-weather-sandflies.html">Sandflies, Weather, and Seasons, How to Plan a Comfortable Trip</a></h3>
-            <p>Plan around New Zealand’s shifting weather bands, winds, and sandfly zones with month-by-month comfort intel. Gear suggestions and coping tactics keep the crew cosy without overpacking.</p>
-            <p class="guide-links"><a href="nz-camping-seasons-weather-sandflies.html">Seasonal planning guide</a> · <a href="camping-packing-list-nz.html">Packing checklist</a></p>
+            <ul class="guide-bullets"><li>Delivers month-by-month comfort intel, wind/rain trends, and sandfly hotspots.</li><li>Suggests gear and tactics to stay comfortable without overpacking.</li></ul>
+            <p class="guide-links"><span class="guide-arrow">→</span> <a href="nz-camping-seasons-weather-sandflies.html">Seasonal planning guide</a> · <a href="camping-packing-list-nz.html">Packing checklist</a></p>
           </article>
 
           <article class="guide-preview">
             <h3><a href="camping-packing-list-nz.html">Essential NZ Camping Packing List with Regional Variants</a></h3>
-            <p>Run through a practical checklist of core camping essentials plus alpine, coastal, and wet-weather extras tailored to NZ conditions. Printable PDFs and comms advice make group prep fast and fuss-free.</p>
-            <p class="guide-links"><a href="camping-packing-list-nz.html">Download the checklist</a> · <a href="nz-camping-seasons-weather-sandflies.html">Match to seasons</a></p>
+            <ul class="guide-bullets"><li>Lists core essentials plus alpine, coastal, and wet-weather add-ons for NZ trips.</li><li>Includes printable checklist and comms/emergency recommendations.</li></ul>
+            <p class="guide-links"><span class="guide-arrow">→</span> <a href="camping-packing-list-nz.html">Download the checklist</a> · <a href="nz-camping-seasons-weather-sandflies.html">Match to seasons</a></p>
           </article>
 
           <article class="guide-preview">
             <h3><a href="responsible-camping-nz.html">Responsible Camping in NZ, Leave No Trace Applied Locally</a></h3>
-            <p>See how Leave No Trace principles translate to Aotearoa’s landscapes, wildlife, and communities in plain language. Share the code-of-conduct graphic and biosecurity tips so everyone in your convoy protects the whenua.</p>
-            <p class="guide-links"><a href="responsible-camping-nz.html">Read the code of conduct</a> · <a href="dump-stations-nz.html">Waste etiquette</a></p>
+            <ul class="guide-bullets"><li>Adapts Leave No Trace to Aotearoa with wildlife and biosecurity guidance.</li><li>Community expectations and shareable code-of-conduct graphic keep locals onside.</li></ul>
+            <p class="guide-links"><span class="guide-arrow">→</span> <a href="responsible-camping-nz.html">Read the code of conduct</a> · <a href="dump-stations-nz.html">Waste etiquette</a></p>
           </article>
 
           <article class="guide-preview">
             <h3><a href="top-scenic-campsites-nz.html">Top 25 Scenic Campsites in New Zealand by Region</a></h3>
-            <p>Scout 25 postcard-ready campsites complete with KiwiCamping deep links for instant saving and navigation. Access notes, booking cues, and photo ideas help you line up unforgettable sunrise spots.</p>
-            <p class="guide-links"><a href="top-scenic-campsites-nz.html">See the top 25</a> · <a href="where-to-camp-in-new-zealand.html">Regional overview</a></p>
+            <ul class="guide-bullets"><li>Showcases 25 scenic campsites with KiwiCamping deep links and access notes.</li><li>Photo ideas and booking cues help you line up sunrise-perfect stays.</li></ul>
+            <p class="guide-links"><span class="guide-arrow">→</span> <a href="top-scenic-campsites-nz.html">See the top 25</a> · <a href="where-to-camp-in-new-zealand.html">Regional overview</a></p>
           </article>
 
           <article class="guide-preview">
             <h3><a href="two-week-camper-itinerary-nz.html">Two-Week New Zealand Camper Itinerary, North and South Islands</a></h3>
-            <p>Follow a 14-day itinerary that balances DOC gems, freedom sites, and holiday parks while weaving in ferry crossings, fuel, and grocery stops. Downloadable GPX files and printable day plans make customising the route effortless.</p>
-            <p class="guide-links"><a href="two-week-camper-itinerary-nz.html">Load the 14-day plan</a> · <a href="camping-costs-nz.html">Budget the trip</a></p>
+            <ul class="guide-bullets"><li>Provides a 14-day itinerary mixing DOC, freedom, and holiday park nights.</li><li>Fuel, ferry, grocery, GPX, and printable day plans make customizing easy.</li></ul>
+            <p class="guide-links"><span class="guide-arrow">→</span> <a href="two-week-camper-itinerary-nz.html">Load the 14-day plan</a> · <a href="camping-costs-nz.html">Budget the trip</a></p>
           </article>
 
           <article class="guide-preview">
             <h3><a href="camping-costs-nz.html">Costs of Camping in NZ, Budget Breakdown with Real Examples</a></h3>
-            <p>Stack real-world budgets for solo travellers, couples, and families by mixing free nights, DOC stays, and holiday parks. We add fuel, ferry fares, food, and gear amortisation so you can tweak the spreadsheet to your style.</p>
-            <p class="guide-links"><a href="camping-costs-nz.html">Plan your budget</a> · <a href="holiday-parks-nz-booking-guide.html">Save on bookings</a></p>
+            <ul class="guide-bullets"><li>Builds sample budgets for solo, couple, and family adventures across seasons.</li><li>Accounts for accommodation mix, fuel, ferries, food, and gear amortization.</li></ul>
+            <p class="guide-links"><span class="guide-arrow">→</span> <a href="camping-costs-nz.html">Plan your budget</a> · <a href="holiday-parks-nz-booking-guide.html">Save on bookings</a></p>
           </article>
         </div>
       </section>
