--- a/index.html
+++ b/index.html
@@ -491,63 +491,78 @@
       <section id="camping-guides" class="guides container" aria-label="KiwiCamping tutorials and blog posts">
 <article class="guide-preview">
             <h3><a href="best-nz-camping-apps.html">Best Camping Apps for New Zealand in 2025</a></h3>
-            <ul class="guide-bullets"><li>Lab-tested KiwiCamping vs Rankers, CamperMate, WikiCamps, and AllTrails across NZ.</li><li>Shows who each app suits, how offline data behaves, and where pricing/privacy differ.</li></ul><p class="guide-links"><span class="guide-arrow">→</span> <a href="best-nz-camping-apps.html">Read the full guide</a> · <a href="holiday-parks-nz-booking-guide.html">Booking tactics</a></p>
+            <ul class="guide-bullets"><li>Lab-tested KiwiCamping vs Rankers, CamperMate, WikiCamps, and AllTrails across NZ.</li><li>Shows who each app suits, how offline data behaves, and where pricing/privacy differ.</li></ul>
+            <p class="guide-links"><span class="guide-arrow">→</span> <a href="best-nz-camping-apps.html">Read the full guide</a> · <a href="holiday-parks-nz-booking-guide.html">Booking tactics</a></p>
           </article>
 <article class="guide-preview">
             <h3><a href="freedom-camping-rules-nz.html">Freedom Camping in New Zealand, Rules by Region</a></h3>
-            <ul class="guide-bullets"><li>Explains national law plus every council bylaw in plain language.</li><li>Includes signage tips and downloadable cheat sheets for North and South Island.</li></ul><p class="guide-links"><span class="guide-arrow">→</span> <a href="freedom-camping-rules-nz.html">Region-by-region rules</a> · <a href="self-contained-vehicles-nz.html">Self-contained requirements</a></p>
+            <ul class="guide-bullets"><li>Explains national law plus every council bylaw in plain language.</li><li>Includes signage tips and downloadable cheat sheets for North and South Island.</li></ul>
+            <p class="guide-links"><span class="guide-arrow">→</span> <a href="freedom-camping-rules-nz.html">Region-by-region rules</a> · <a href="self-contained-vehicles-nz.html">Self-contained requirements</a></p>
           </article>
 <article class="guide-preview">
             <h3><a href="free-camping-nz-legal.html">Can You Camp for Free in NZ, Where It Is Legal and Safe</a></h3>
-            <ul class="guide-bullets"><li>Identifies genuinely free camping options and typical enforcement patterns.</li><li>Offers etiquette, safety, and legality checks before you settle in for the night.</li></ul><p class="guide-links"><span class="guide-arrow">→</span> <a href="free-camping-nz-legal.html">Legal free camping workflow</a> · <a href="dump-stations-nz.html">Dump station map</a></p>
+            <ul class="guide-bullets"><li>Identifies genuinely free camping options and typical enforcement patterns.</li><li>Offers etiquette, safety, and legality checks before you settle in for the night.</li></ul>
+            <p class="guide-links"><span class="guide-arrow">→</span> <a href="free-camping-nz-legal.html">Legal free camping workflow</a> · <a href="dump-stations-nz.html">Dump station map</a></p>
           </article>
 <article class="guide-preview">
             <h3><a href="where-to-camp-in-new-zealand.html">Where You Can Camp in New Zealand, A Complete Location Guide</a></h3>
-            <ul class="guide-bullets"><li>Highlights DOC, council, private, and iwi-managed stays for both islands.</li><li>Seasonal notes and access guidance help match locations to your trip style.</li></ul><p class="guide-links"><span class="guide-arrow">→</span> <a href="where-to-camp-in-new-zealand.html">Browse the full location guide</a> · <a href="top-scenic-campsites-nz.html">See the scenic list</a></p>
+            <ul class="guide-bullets"><li>Highlights DOC, council, private, and iwi-managed stays for both islands.</li><li>Seasonal notes and access guidance help match locations to your trip style.</li></ul>
+            <p class="guide-links"><span class="guide-arrow">→</span> <a href="where-to-camp-in-new-zealand.html">Browse the full location guide</a> · <a href="top-scenic-campsites-nz.html">See the scenic list</a></p>
           </article>
 <article class="guide-preview">
             <h3><a href="holiday-parks-nz-booking-guide.html">Holiday Parks in New Zealand, How to Choose and Book</a></h3>
-            <ul class="guide-bullets"><li>Compares amenities, pricing bands, partners, and loyalty perks for NZ holiday parks.</li><li>Step-by-step booking, cancellation, and after-hours arrival workflow with checklists.</li></ul><p class="guide-links"><span class="guide-arrow">→</span> <a href="holiday-parks-nz-booking-guide.html">Holiday park HowTo</a> · <a href="camping-costs-nz.html">Budget calculator</a></p>
+            <ul class="guide-bullets"><li>Compares amenities, pricing bands, partners, and loyalty perks for NZ holiday parks.</li><li>Step-by-step booking, cancellation, and after-hours arrival workflow with checklists.</li></ul>
+            <p class="guide-links"><span class="guide-arrow">→</span> <a href="holiday-parks-nz-booking-guide.html">Holiday park HowTo</a> · <a href="camping-costs-nz.html">Budget calculator</a></p>
           </article>
 <article class="guide-preview">
             <h3><a href="doc-campsites-huts-guide.html">DOC Campsites and Huts, Reservations, Fees, and Etiquette</a></h3>
-            <ul class="guide-bullets"><li>Breaks down DOC campsite and hut categories, fees, and booking windows.</li><li>Etiquette tips, alert links, and comparisons prepare you for serviced or backcountry stays.</li></ul><p class="guide-links"><span class="guide-arrow">→</span> <a href="doc-campsites-huts-guide.html">Read the DOC playbook</a> · <a href="two-week-camper-itinerary-nz.html">Plan a DOC-heavy itinerary</a></p>
+            <ul class="guide-bullets"><li>Breaks down DOC campsite and hut categories, fees, and booking windows.</li><li>Etiquette tips, alert links, and comparisons prepare you for serviced or backcountry stays.</li></ul>
+            <p class="guide-links"><span class="guide-arrow">→</span> <a href="doc-campsites-huts-guide.html">Read the DOC playbook</a> · <a href="two-week-camper-itinerary-nz.html">Plan a DOC-heavy itinerary</a></p>
           </article>
 <article class="guide-preview">
             <h3><a href="self-contained-vehicles-nz.html">Self-Contained Vehicles in NZ, What It Really Requires</a></h3>
-            <ul class="guide-bullets"><li>Translates NZS 5465 requirements for fixed toilets, tanks, vents, and inspection prep.</li><li>Covers enforcement realities and includes printable compliance checklists.</li></ul><p class="guide-links"><span class="guide-arrow">→</span> <a href="self-contained-vehicles-nz.html">Certification checklist</a> · <a href="freedom-camping-rules-nz.html">Freedom camping rules</a></p>
+            <ul class="guide-bullets"><li>Translates NZS 5465 requirements for fixed toilets, tanks, vents, and inspection prep.</li><li>Covers enforcement realities and includes printable compliance checklists.</li></ul>
+            <p class="guide-links"><span class="guide-arrow">→</span> <a href="self-contained-vehicles-nz.html">Certification checklist</a> · <a href="freedom-camping-rules-nz.html">Freedom camping rules</a></p>
           </article>
 <article class="guide-preview">
             <h3><a href="dump-stations-nz.html">Dump Stations and Waste Etiquette for Campers</a></h3>
-            <ul class="guide-bullets"><li>Maps every dump station nationwide with gear suggestions and rinse routines.</li><li>Shows how to avoid fines, manage detergents, and keep facilities open.</li></ul><p class="guide-links"><span class="guide-arrow">→</span> <a href="dump-stations-nz.html">Waste etiquette guide</a> · <a href="self-contained-vehicles-nz.html">Self-contained tips</a></p>
+            <ul class="guide-bullets"><li>Maps every dump station nationwide with gear suggestions and rinse routines.</li><li>Shows how to avoid fines, manage detergents, and keep facilities open.</li></ul>
+            <p class="guide-links"><span class="guide-arrow">→</span> <a href="dump-stations-nz.html">Waste etiquette guide</a> · <a href="self-contained-vehicles-nz.html">Self-contained tips</a></p>
           </article>
 <article class="guide-preview">
             <h3><a href="campfire-rules-nz.html">Fire Rules, Bans, and Safe Cooking Outdoors</a></h3>
-            <ul class="guide-bullets"><li>Outlines fire seasons, permits, and regional restrictions at a glance.</li><li>Decision charts plus cooking alternatives keep meals on track during burn bans.</li></ul><p class="guide-links"><span class="guide-arrow">→</span> <a href="campfire-rules-nz.html">Check current fire rules</a> · <a href="camping-packing-list-nz.html#stoves">Packing list add-ons</a></p>
+            <ul class="guide-bullets"><li>Outlines fire seasons, permits, and regional restrictions at a glance.</li><li>Decision charts plus cooking alternatives keep meals on track during burn bans.</li></ul>
+            <p class="guide-links"><span class="guide-arrow">→</span> <a href="campfire-rules-nz.html">Check current fire rules</a> · <a href="camping-packing-list-nz.html#stoves">Packing list add-ons</a></p>
           </article>
 <article class="guide-preview">
             <h3><a href="nz-camping-seasons-weather-sandflies.html">Sandflies, Weather, and Seasons, How to Plan a Comfortable Trip</a></h3>
-            <ul class="guide-bullets"><li>Delivers month-by-month comfort intel, wind/rain trends, and sandfly hotspots.</li><li>Suggests gear and tactics to stay comfortable without overpacking.</li></ul><p class="guide-links"><span class="guide-arrow">→</span> <a href="nz-camping-seasons-weather-sandflies.html">Seasonal planning guide</a> · <a href="camping-packing-list-nz.html">Packing checklist</a></p>
+            <ul class="guide-bullets"><li>Delivers month-by-month comfort intel, wind/rain trends, and sandfly hotspots.</li><li>Suggests gear and tactics to stay comfortable without overpacking.</li></ul>
+            <p class="guide-links"><span class="guide-arrow">→</span> <a href="nz-camping-seasons-weather-sandflies.html">Seasonal planning guide</a> · <a href="camping-packing-list-nz.html">Packing checklist</a></p>
           </article>
 <article class="guide-preview">
             <h3><a href="camping-packing-list-nz.html">Essential NZ Camping Packing List with Regional Variants</a></h3>
-            <ul class="guide-bullets"><li>Lists core essentials plus alpine, coastal, and wet-weather add-ons for NZ trips.</li><li>Includes printable checklist and comms/emergency recommendations.</li></ul><p class="guide-links"><span class="guide-arrow">→</span> <a href="camping-packing-list-nz.html">Download the checklist</a> · <a href="nz-camping-seasons-weather-sandflies.html">Match to seasons</a></p>
+            <ul class="guide-bullets"><li>Lists core essentials plus alpine, coastal, and wet-weather add-ons for NZ trips.</li><li>Includes printable checklist and comms/emergency recommendations.</li></ul>
+            <p class="guide-links"><span class="guide-arrow">→</span> <a href="camping-packing-list-nz.html">Download the checklist</a> · <a href="nz-camping-seasons-weather-sandflies.html">Match to seasons</a></p>
           </article>
 <article class="guide-preview">
             <h3><a href="responsible-camping-nz.html">Responsible Camping in NZ, Leave No Trace Applied Locally</a></h3>
-            <ul class="guide-bullets"><li>Adapts Leave No Trace to Aotearoa with wildlife and biosecurity guidance.</li><li>Community expectations and shareable code-of-conduct graphic keep locals onside.</li></ul><p class="guide-links"><span class="guide-arrow">→</span> <a href="responsible-camping-nz.html">Read the code of conduct</a> · <a href="dump-stations-nz.html">Waste etiquette</a></p>
+            <ul class="guide-bullets"><li>Adapts Leave No Trace to Aotearoa with wildlife and biosecurity guidance.</li><li>Community expectations and shareable code-of-conduct graphic keep locals onside.</li></ul>
+            <p class="guide-links"><span class="guide-arrow">→</span> <a href="responsible-camping-nz.html">Read the code of conduct</a> · <a href="dump-stations-nz.html">Waste etiquette</a></p>
           </article>
 <article class="guide-preview">
             <h3><a href="top-scenic-campsites-nz.html">Top 25 Scenic Campsites in New Zealand by Region</a></h3>
-            <ul class="guide-bullets"><li>Showcases 25 scenic campsites with KiwiCamping deep links and access notes.</li><li>Photo ideas and booking cues help you line up sunrise-perfect stays.</li></ul><p class="guide-links"><span class="guide-arrow">→</span> <a href="top-scenic-campsites-nz.html">See the top 25</a> · <a href="where-to-camp-in-new-zealand.html">Regional overview</a></p>
+            <ul class="guide-bullets"><li>Showcases 25 scenic campsites with KiwiCamping deep links and access notes.</li><li>Photo ideas and booking cues help you line up sunrise-perfect stays.</li></ul>
+            <p class="guide-links"><span class="guide-arrow">→</span> <a href="top-scenic-campsites-nz.html">See the top 25</a> · <a href="where-to-camp-in-new-zealand.html">Regional overview</a></p>
           </article>
 <article class="guide-preview">
             <h3><a href="two-week-camper-itinerary-nz.html">Two-Week New Zealand Camper Itinerary, North and South Islands</a></h3>
-            <ul class="guide-bullets"><li>Provides a 14-day itinerary mixing DOC, freedom, and holiday park nights.</li><li>Fuel, ferry, grocery, GPX, and printable day plans make customizing easy.</li></ul><p class="guide-links"><span class="guide-arrow">→</span> <a href="two-week-camper-itinerary-nz.html">Load the 14-day plan</a> · <a href="camping-costs-nz.html">Budget the trip</a></p>
+            <ul class="guide-bullets"><li>Provides a 14-day itinerary mixing DOC, freedom, and holiday park nights.</li><li>Fuel, ferry, grocery, GPX, and printable day plans make customizing easy.</li></ul>
+            <p class="guide-links"><span class="guide-arrow">→</span> <a href="two-week-camper-itinerary-nz.html">Load the 14-day plan</a> · <a href="camping-costs-nz.html">Budget the trip</a></p>
           </article>
 <article class="guide-preview">
             <h3><a href="camping-costs-nz.html">Costs of Camping in NZ, Budget Breakdown with Real Examples</a></h3>
-            <ul class="guide-bullets"><li>Builds sample budgets for solo, couple, and family adventures across seasons.</li><li>Accounts for accommodation mix, fuel, ferries, food, and gear amortization.</li></ul><p class="guide-links"><span class="guide-arrow">→</span> <a href="camping-costs-nz.html">Plan your budget</a> · <a href="holiday-parks-nz-booking-guide.html">Save on bookings</a></p>
+            <ul class="guide-bullets"><li>Builds sample budgets for solo, couple, and family adventures across seasons.</li><li>Accounts for accommodation mix, fuel, ferries, food, and gear amortization.</li></ul>
+            <p class="guide-links"><span class="guide-arrow">→</span> <a href="camping-costs-nz.html">Plan your budget</a> · <a href="holiday-parks-nz-booking-guide.html">Save on bookings</a></p>
           </article></section>
 
       <section id="reviews" class="reviews container" aria-label="Reviews and testimonials">
